--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "com.mobik.tools": "file:D:/Projects/Unity/CustomPackages/Tools",
-    "com.unity.ads": "4.3.0",
-    "com.unity.feature.2d": "1.0.0",
-    "com.unity.ide.rider": "3.0.18",
-    "com.unity.inputsystem": "1.4.4",
-    "com.unity.render-pipelines.universal": "12.1.9",
+    "com.unity.ads": "4.4.2",
+    "com.unity.ai.navigation": "1.1.3",
+    "com.unity.feature.2d": "2.0.0",
+    "com.unity.ide.rider": "3.0.21",
+    "com.unity.inputsystem": "1.6.1",
+    "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
